# ctools

./: .gitignore  CMakeLists.txt  Makefile  package.json
scripts/: autobuild.sh  build.sh  clean.sh  common.lib.sh  rebuild.sh  test.sh
src/: CMakeLists.txt
src/ac/devtracker/: main.c
src/signals/: CMakeLists.txt  signals_util.c
src/signals/include/: signals_util.h
src/strings/: CMakeLists.txt  strings.c  strings.h  strings_util.c
src/strings/include/: strings_util.h
src/strings/split_string/: main.c
src/strings/splitstring/: CMakeLists.txt  main.c
test/: CMakeLists.txt
test/test_signals/: CMakeLists.txt  main.c
test/test_splitstring/: CMakeLists.txt  main.c
